-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.8.0-beta1
-
-
fc36a0b5bde0c4545d5a216901da90148a0317bd
Steps to reproduce:
1. Switch to Debug mode
2. Tools > Git > Local Repository > Branches...
3. Nothing happens (as the right side bar is invisible in Debug mode)
Expected behavior:
- The Branches side panel appears in the right side bar
Possible solution:
- Switch to Edit mode when then side panel was demanded
- relates to
-
QTCREATORBUG-21081 Date column not visible in Git Branches side panel
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-21088 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
240110,3 | Git: Switch to edit mode when branch view is requested | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |