Git: Switch to edit mode when branch view is requested

The branch view is shown in the right side bar, which is
not visible in debug mode, for example.

Task-number: QTCREATORBUG-21088
Change-Id: If8fcab7a0b21d82534935bc555b79d1571d37633
Reviewed-by: Orgad Shaneh <orgads@gmail.com>